--- a/bd/src/main/resources/application-oracle.properties
+++ b/bd/src/main/resources/application-oracle.properties
@@ -1,6 +1,6 @@
 # Configuración de Oracle
     spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-    spring.datasource.url=jdbc:oracle:thin:@10.10.10.9:1521/XE
+    spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
     spring.datasource.username=FGONZALEZPF
     spring.datasource.password=1000
     spring.jpa.show-sql=true
