--- a/bd/src/main/resources/application-oracle.properties
+++ b/bd/src/main/resources/application-oracle.properties
@@ -1,7 +1,7 @@
 # Configuración de Oracle
     spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-    spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
-    spring.datasource.username=FGONZALEZPF
+    spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
+    spring.datasource.username=fmarroquin
     spring.datasource.password=1000
     spring.jpa.show-sql=true
     spring.jpa.hibernate.ddl-auto=update
